# torchscaffold

./: .gitignore  pyproject.toml
examples/: mnist.py
examples/MNIST - Classification/: mnist.py
examples/MNIST - GAN/: config.py  discriminator.py  generator.py  mnist.py
examples/MNIST - Upscaling/: config.py  data.py  mnist.py  model.py
torchscaffold/: layers.py  plotting.py  training.py
torchscaffold/training/: gan_trainer.py
