[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "torchscaffold"
version = "0.0.1"
authors = [
    {name = "Matt Plank", email = "matthew_plank@outlook.com"},
]
description = "A simple scaffold for PyTorch projects"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.1"
]
